--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -11,108 +11,127 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/quiz"
-        android:layout_width="606dp"
-        android:layout_height="360dp"
+        android:layout_width="671dp"
+        android:layout_height="268dp"
+
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="10dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginEnd="150dp"
-        android:layout_marginRight="40dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginStart="19dp"
+        android:layout_marginLeft="19dp"
+        android:layout_marginTop="44dp"
+        android:layout_marginEnd="41dp"
+        android:layout_marginRight="41dp"
+        android:layout_marginBottom="5dp"
         android:background="@drawable/styling_outer">
 
-        <RadioGroup
-            android:id="@+id/radioGroup"
-            android:layout_width="316dp"
-            android:layout_height="221dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginBottom="16dp"
+
+        <Button
+            android:id="@+id/radioButton1"
+            android:layout_width="206dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="152dp"
+            android:layout_marginRight="152dp"
+            android:layout_marginBottom="1dp"
+            android:background="@drawable/styling_option"
+            android:gravity="center"
+            android:textColor="#ffffff"
+            android:textSize="16sp"
+            app:buttonTint="#164CEF"
+            app:layout_constraintBottom_toTopOf="@+id/radioButton3"
+            app:layout_constraintEnd_toStartOf="@+id/radioButton2"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/question"
+            app:layout_constraintVertical_bias="0.666" />
+
+        <Button
+            android:id="@+id/radioButton2"
+            android:layout_width="206dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginTop="28dp"
+            android:background="@drawable/styling_option"
+            android:gravity="center"
+            android:textColor="#FAFAFA"
+            android:textSize="16sp"
+            app:buttonTint="#F44336"
+            app:layout_constraintBottom_toTopOf="@+id/radioButton4"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.965"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/question"
+            app:layout_constraintVertical_bias="1.0" />
+
+        <Button
+            android:id="@+id/radioButton4"
+            android:layout_width="206dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginBottom="4dp"
+            android:background="@drawable/styling_option"
+            android:gravity="center"
+            android:textColor="#FFFCFC"
+            android:textSize="16sp"
+            app:buttonTint="#FFEB3B"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.965"
+            app:layout_constraintStart_toStartOf="parent" />
 
-            <RadioButton
-                android:id="@+id/radioButton1"
-                android:layout_width="280dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="40dp"
-                android:background="@drawable/styling_option"
-                android:gravity="center"
-                android:textColor="#FAF8F8"
-                android:textSize="16sp"
-                app:buttonTint="#164CEF" />
-
-            <RadioButton
-                android:id="@+id/radioButton2"
-                android:layout_width="280dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginRight="40dp"
-                android:background="@drawable/styling_option"
-                android:gravity="center"
-                android:textColor="#FAFAFA"
-                android:textSize="16sp"
-                app:buttonTint="#F44336" />
-
-            <RadioButton
-                android:id="@+id/radioButton3"
-                android:layout_width="280dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginRight="40dp"
-                android:background="@drawable/styling_option"
-                android:gravity="center"
-                android:textColor="#FDFCFC"
-                android:textSize="16sp"
-                app:buttonTint="#4CAF50" />
-
-            <RadioButton
-                android:id="@+id/radioButton4"
-                android:layout_width="280dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginRight="40dp"
-                android:background="@drawable/styling_option"
-                android:gravity="center"
-                android:textColor="#FFFCFC"
-                android:textSize="16sp"
-                app:buttonTint="#FFEB3B" />
-        </RadioGroup>
+        <Button
+            android:id="@+id/radioButton3"
+            android:layout_width="206dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginTop="66dp"
+            android:layout_marginEnd="72dp"
+            android:layout_marginRight="72dp"
+            android:layout_marginBottom="16dp"
+            android:background="@drawable/styling_option"
+            android:gravity="center"
+            android:textColor="#FDFCFC"
+            android:textSize="16sp"
+            app:buttonTint="#4CAF50"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/radioButton4"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/question"
+            app:layout_constraintVertical_bias="0.0" />
 
         <LinearLayout
-            android:id="@+id/linearLayout"
-            android:layout_width="607dp"
-            android:layout_height="106dp"
-            android:layout_marginBottom="16dp"
-            android:background="@drawable/styling_landquestion"
+            android:id="@+id/question"
+            android:layout_width="673dp"
+            android:layout_height="138dp"
+
             android:orientation="vertical"
-            app:layout_constraintBottom_toTopOf="@+id/radioGroup"
-            app:layout_constraintEnd_toEndOf="@+id/quiz"
-            app:layout_constraintHorizontal_bias="0.125"
-            app:layout_constraintStart_toStartOf="@+id/quiz"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0">
+            app:layout_constraintVertical_bias="0.0">
 
             <TextView
                 android:id="@+id/textView"
-                android:layout_width="439dp"
+                android:layout_width="633dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="70dp"
+                android:layout_marginLeft="20dp"
                 android:layout_marginTop="30dp"
+                android:gravity="center"
+                android:text="Round-1"
                 android:textColor="#FAF8F8"
-                android:textSize="20dp" />
+
+                android:textSize="30dp"
+                android:textStyle="italic" />
 
             <TextView
                 android:id="@+id/textView2"
-                android:layout_width="494dp"
+                android:layout_width="572dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="50dp"
@@ -127,84 +146,110 @@
                 android:textStyle="bold"
                 tools:ignore="MissingConstraints" />
 
-            <TextView
-                android:id="@+id/textView4"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_marginEnd="528dp"
-                android:layout_marginRight="528dp"
-                android:layout_marginBottom="360dp"
-                android:background="@drawable/styling_questionno"
-                android:fontFamily="@font/petrona"
-                android:gravity="center"
-                android:layout_marginLeft="15dp"
-                android:layout_marginStart="15dp"
-                android:layout_marginTop="-5dp"
-                android:text="1"
-                android:textColor="@color/black"
-                android:textSize="24sp"
-                android:textStyle="bold" />
-
         </LinearLayout>
-
-        <TextView
-            android:id="@+id/total"
-            android:layout_width="223dp"
-            android:layout_height="245dp"
-            android:layout_marginStart="12dp"
-            android:layout_marginLeft="12dp"
-            android:background="@drawable/stlyling_land"
-            android:fontFamily="@font/petrona"
-            android:gravity="center"
-            android:textColor="@color/white"
-            android:textSize="30sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toEndOf="@+id/radioGroup"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <TextView
-        android:id="@+id/finalscore"
-        android:layout_width="wrap_content"
-        android:layout_height="226dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="626dp"
-        android:layout_marginLeft="626dp"
-        android:layout_marginEnd="17dp"
-        android:layout_marginRight="17dp"
-        android:layout_marginBottom="137dp"
-        android:autoText="false"
-        android:background="#F8F5F5"
-        android:gravity="center_vertical"
-        android:shadowColor="#2CF40B"
-        android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:visibility="invisible" />
 
-    <TextView
-        android:id="@+id/timer"
-        android:layout_width="71dp"
-        android:layout_height="101dp"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="119dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="630dp"
-        android:layout_marginLeft="630dp"
-        android:layout_marginEnd="31dp"
-        android:layout_marginRight="31dp"
-        android:layout_marginBottom="20dp"
-        android:textSize="20sp"
-        android:textColor="@color/white"
-        android:text="00:00" />
+        android:layout_marginStart="0dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginBottom="276dp"
+        android:background="@drawable/styling_scorecard">
+
+        <TextView
+            android:id="@+id/lives"
+            android:layout_width="136dp"
+            android:layout_height="41dp"
+            android:layout_above="@+id/textView4"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:fontFamily="@font/petrona"
+            android:gravity="center"
+            android:textColor="#F60B0B"
+            android:textSize="29sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.81"
+            app:layout_constraintStart_toEndOf="@+id/total"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.064" />
+
+        <TextView
+            android:id="@+id/timer"
+            android:layout_width="134dp"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/textView4"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:layout_marginEnd="72dp"
+            android:layout_marginRight="72dp"
+            android:gravity="center_horizontal"
+            android:text="00:00"
+            android:textColor="@color/white"
+            android:textSize="25dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/total"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.058" />
+
+        <TextView
+            android:id="@+id/total"
+            android:layout_width="166dp"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/textView4"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:gravity="center_horizontal"
+            android:textColor="#FAFAFA"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.431"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.075" />
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="54dp"
+            android:layout_height="28dp"
+            android:layout_marginTop="2dp"
+            android:background="@drawable/styling_questionno"
+            android:fontFamily="@font/petrona"
+            android:gravity="center"
+            android:text="1"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/lives"
+            app:layout_constraintHorizontal_bias="0.338"
+            app:layout_constraintStart_toEndOf="@+id/timer"
+            app:layout_constraintTop_toBottomOf="@+id/total"
+            app:layout_constraintVertical_bias="0.0" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </RelativeLayout>
 
